crates/amaru-observability/macros/tests/ui/compile_fail/wrong_field_type.stderr
error: Wrong type for field 'second': expected 'u64', found 'i32'
  --> tests/ui/compile_fail/wrong_field_type.rs:7:1
   |
 7 | / define_local_schemas! {
 8 | |     test {
 9 | |         sub {
10 | |             /// Test schema for wrong field type test
...  |
18 | | }
   | |_^
...
21 |   #[trace(test::sub::SCHEMA)]
   |   --------------------------- in this attribute macro expansion
   |
   = note: this error originates in the macro `__TEST__SUB_SCHEMA_RECORD` which comes from the expansion of the attribute macro `trace` (in Nightly builds, run with -Z macro-backtrace for more info)
